<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="2dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="2dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fabrizio.bolaoamigosoficial.MainActivity"
    android:background="@color/colorAccent">

    <!-- A RecyclerView with some commonly used attributes -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:id="@+id/btnLogin2">

        <TextView
            android:text="Inicio..."
            android:layout_width="match_parent"
            android:id="@+id/tvUserCheck"
            android:gravity="center"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="177dp"
            android:layout_height="124dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView2"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/bem_vindo"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_gravity="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp">

            <TextView
                android:text="Nome : "
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView6"
                android:layout_weight="2"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/digite_nome"
                android:id="@+id/etNomeUsuario"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">

            <TextView
                android:text="Senha : "
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView7"
                android:layout_weight="2"
                android:gravity="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etSenhaUsuario"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="digite a senha"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:text="@string/login"
            android:layout_width="290dp"
            android:layout_height="56dp"
            android:id="@+id/btnLogin"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/btnclick"
            android:paddingRight="20dp"
            android:textAlignment="center"
            android:clickable="false" />

        <Button
            android:text="@string/cadastrese"
            android:layout_width="290dp"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:background="@drawable/btnclick"
            android:id="@+id/btnCadastrese" />


    </LinearLayout>


</LinearLayout>
